# nginx-logs-to-mongo

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  main.cpp  parse.cpp  parse.h  tests.cpp  tests.h  types.h
docker/gcc-linux-compile/: Dockerfile
docker/mongo/: docker-compose.yml
